--- a/restaurant.html
+++ b/restaurant.html
@@ -30,13 +30,13 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container"> aria-label="Map of restaurants" role="app">
-      <div id="map"></div>
+    <section id="map-container" aria-label="Map of restaurants" role="app">
+        <div id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container" tabindex="0" aria-label="restaurants info">
-      <h1 id="restaurant-name" tabindex="0"></h1>
+      <h2 id="restaurant-name" tabindex="0"></h2>
       <img id="restaurant-img" tabindex="0">
       <p id="restaurant-cuisine" tabindex="0"></p>
       <p id="restaurant-address" tabindex="0"></p>
